# planeo-mcp-server

./: README.md  pyproject.toml
src/mcpserver/: __main__.py  product.py
